# Predicting_Price_Moves_with_News_Sentiment

./: .gitignore  README.md  pyproject.toml  requirements.txt
Scripts/: run_descriptive_stats.py  run_preprocess_cleaner.py  run_publisher_analysis.py  run_sentment_correlation.py  run_technical_analysis.py  run_temporal_analysis.py  run_text_analysis.py
config/: app.yaml  data_sources.yaml  database.yaml  features.yaml  logger.yaml  processing_pipeline.yaml
src/: customException.py  logger.py
src/analysis/: descriptive_stats.py  preprocess_cleaner.py  publisher_analyzer.py  sentiment_correlation.py  text_analyzer.py  time_series_analyzer.py
src/data/: data_loader.py
src/techinical/: technical_analysis.py
src/utility/: configLoader.py
tests/: test_import.py  test_yaml_config.py
